--- a/src/app/add-todo/add-todo.component.html
+++ b/src/app/add-todo/add-todo.component.html
@@ -1,5 +1,6 @@
+<app-navbar></app-navbar>
 <div class="container">
-    <div class="row">
+    <div class="row g-3 mt-5">
         <div class="col col-12 col-sm-6 col-md-6 col-lg-12 col-xl-12 col-xxl-12">
             <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6"> 
 
