--- a/src/app/view-todo/view-todo.component.html
+++ b/src/app/view-todo/view-todo.component.html
@@ -16,9 +16,9 @@
             <tbody>
                 <tr *ngFor="let i of todos">
                     <td>{{i.userId}}</td>
-                    <th>{{i.id}}</th>
-                    <th>{{i.title}}</th>
-                    <th>{{i.completed}}</th>
+                    <td>{{i.id}}</td>
+                    <td>{{i.title}}</td>
+                    <td>{{i.completed}}</td>
                 </tr>
             </tbody>
             </table>
